	- GetItemPool(int Seed, boolean Raw) - Retrieves the pool the game would use to generate random collectibles in the current room.
Fixes:
	- Fix a vanilla bug that caused Hush's laser attack to ignore a room's slowdown state and always chase the player at full speed
	- Restore/fix the vein effect in Hush's boss room pre-Repentance
	- Temporarily disable modified RoomDescriptor.OverrideData handling to prevent potential cases of it not being properly replaced
/newline/
v1.0.10c -
Additions:
* RoomDescriptor:
	InitSeeds(RNG)
* ModCallbacks:
	- MC_PRE_PLAYER_ADD_COSTUME(ItemConfigItem, Player, ItemStateOnly)
		Called before the costume is added to the player. Return ItemConfigItem to replace the costume or true to cancel adding it entirely.
	- MC_PRE_PLAYER_REMOVE_COSTUME(ItemConfigItem, Player)
		Called before the costume is removed from the player. Return true to cancel the removal.
/newline/
* Fixes:
	- Fixed a severe issue with Isaac.PlayCutscene() causing potential corruption when called for custom cutscene.
	- EntityPlayer:SetImmaculateConceptionState(i) now automatically clamps to valid values only [0,14] to avoid crashes.
	- Fixed binder for EntityPlayer:DropCollectibleByHistoryIndex which caused crashes on call.
	- Fixed an issue in ItemPool:GetCollectible that prevented passing ItemPoolType.POOL_NULL.
/newline/
Modified:
* RoomConfigHolder:
	- GetRoomByStageTypeAndVariant(StbType, Type, Variant, Mode = -1)
* Re-enabled "Extra debug render for FindInRadius" option.
/newline/
v1.0.10b -
Modified:
* MusicManager:
	PlayJingle(Music ID, int Duration)
* Fixes:
	- Disabled the new Debug find in radius feature until further notice, since it causes issues on some vanilla calls (Ex: Evil Eye)
* Room:TrySpawnBlueWombTime now checks Game TimeCounter instead of FrameCount, consistent with TrySpawnBossRushDoor and likely the intended behavior
/newline/
v1.0.10a -
Additions:
* EntityPlayer:
	- SetBlackHeart(int BlackHeart)
	- GetCambionFamiliarFlags()