@@ -18,6 +18,8 @@ Additions:
 Fixes:
 	- Fix a vanilla bug that caused Hush's laser attack to ignore a room's slowdown state and always chase the player at full speed
 	- Restore/fix the vein effect in Hush's boss room pre-Repentance
+	- Fix ???/Blue Womb rooms generating in The Void even when not using Better Void Generation
+	- Fix Void Portal rooms potentially not being generated in The Void
 	- Temporarily disable modified RoomDescriptor.OverrideData handling to prevent potential cases of it not being properly replaced
 /newline/
 v1.0.10c -
